--- a/prototypes/inspector/public/styles.css
+++ b/prototypes/inspector/public/styles.css
@@ -7,6 +7,7 @@ html {
 
 body {
   font-family: sans-serif;
+  background: #f5f5f5;
 }
 
 .inspector {
@@ -19,7 +20,7 @@ body {
 
 .attribute {
   display: flex;
-  gap: 8px;
+  gap: 4px;
   flex-direction: column;
 }
 
@@ -32,6 +33,7 @@ body {
 }
 
 .state {
+  background: #fff;
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 8px;
@@ -42,7 +44,7 @@ body {
   gap: 8px;
 }
 
-.state.is-selected {
+.state.is-active {
   border-color: #0074D9;
 }
 
@@ -65,16 +67,21 @@ body {
   border: 0;
   padding: inherit;
   font-size: inherit;
+  color: #aaaaaa;
   background: none;
-  color: #0074d9;
   text-decoration: underline;
 }
 
+.action-name.is-active {
+  color: #0074d9;
+}
+
 .action-target {
-  color: #aaa;
+  color: #aaaaaa;
 }
 
 .view-value {
+  background: #fff;
   display: flex;
   flex-direction: column;
   border: 1px solid #ddd;
@@ -94,7 +101,6 @@ body {
   width: fit-content;
   border: 1px solid #ddd;
 }
-
 
 .frame-variation.is-active > .frame-name {
   color: #0074d9;
@@ -118,6 +124,10 @@ body {
   display: flex;
   gap: 4px;
   flex-direction: column;
+}
+
+.frame-variation > .frame > * {
+  pointer-events: none;
 }
 
 .frame-group {
