--- a/prototypes/inspector/public/app.css
+++ b/prototypes/inspector/public/app.css
@@ -2,4 +2,10 @@
   display: flex;
   gap: 8px;
   padding: 4px;
+  align-items: center;
+  height: 35px;
+}
+
+.todo > input {
+  font-size: inherit;
 }
