--- a/prototypes/inspector/public/styles.css
+++ b/prototypes/inspector/public/styles.css
@@ -69,7 +69,6 @@ body {
   font-size: inherit;
   color: #aaaaaa;
   background: none;
-  text-decoration: underline;
 }
 
 .action-name.is-active {
@@ -118,6 +117,12 @@ body {
 
 .frame-name {
   color: #aaa;
+}
+
+.frame-variations {
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
 }
 
 .frame-variation {
