--- a/prototypes/inspector/public/styles.css
+++ b/prototypes/inspector/public/styles.css
@@ -6,8 +6,9 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   background: #f5f5f5;
+  margin: 0;
 }
 
 .inspector {
@@ -15,12 +16,30 @@ body {
   flex-direction: column;
   gap: 16px;
   padding: 16px;
-  width: fit-content;
+  border-top: 1px solid #ddd;
 }
+
+.inspector:first-child {
+  border-top: 0;
+}
+
+.inspector-header {
+  margin-bottom: 8px;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.inspector-title {
+  font-weight: normal;
+  font-size: 1.2em;
+  margin: 0;
+}
+
 
 .attribute {
   display: flex;
-  gap: 4px;
+  gap: 8px;
   flex-direction: column;
 }
 
@@ -28,8 +47,13 @@ body {
   flex-direction: row;
 }
 
-.attribute-name {
-  font-weight: bold;
+.literal-value {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: fit-content;
+  padding: 4px;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .state {
@@ -85,6 +109,7 @@ body {
   flex-direction: column;
   border: 1px solid #ddd;
   border-radius: 5px;
+  width: fit-content;
 }
 
 .view-value-frames {
