--- a/prototypes/inspector/public/css/source.css
+++ b/prototypes/inspector/public/css/source.css
@@ -1,6 +1,9 @@
 .source {
   padding: 4px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 500px;
 }
 
 .source-tabs {
@@ -25,4 +28,18 @@
   border-radius: 0 10px 10px 10px;
   width: 100%;
   font-family: "Roboto Mono", monospace;
+  height: 100%;
+}
+
+.source-content.has-errors {
+  border: 1px solid var(--error);
+}
+
+.source-content.has-errors:focus {
+  outline-color: var(--error);
+}
+
+
+.source-error {
+  color: var(--error);
 }
